versioned_docs/version-23.2/manage/shared/tiered-storage/_set-retention-limits.mdx
import Link from '@docusaurus/Link';

Redpanda supports retention limits and compaction for topics using Tiered Storage. Set retention limits to purge topic data after it reaches a specified age or size.

Starting in Redpanda version 22.3, object storage is the default storage tier for all streaming data, and retention properties work the same for Tiered Storage topics and local storage topics. Data is retained in object storage until it reaches the configured time or size limit. 

Data becomes eligible for deletion from object storage following `retention.ms` or `retention.bytes`. For example, if `retention.bytes` is set to 10 GiB, then every partition in the topic has a limit of 10 GiB in object storage. When `retention.bytes` is exceeded by data in object storage, the data in object storage is trimmed. If neither `retention.ms` nor `retention.bytes` is specified, then cluster-level defaults are used. 

:::note notes
- During upgrade, Redpanda preserves retention settings for existing topics.
- Both size-based and time-based retention policies are applied simultaneously, so it's possible for your size-based property to override your time-based property, or vice versa. For example, if your size-based property requires removing one segment, and your time-based property requires removing three segments, then three segments are removed. Size-based properties reclaim disk space as close as possible to the maximum size, without exceeding the limit.
:::

For more information, see <Link to={props.frontmatter.linkRoot + 'manage/cluster-maintenance/disk-utilization/#configure-message-retention'}>Configure message retention</Link>.

#### Compacted topics in Tiered Storage

When you set <Link to={props.frontmatter.linkRoot + 'develop/config-topics/#change-the-cleanup-policy'}>`cleanup.policy=compact`</Link> for a topic, nothing gets deleted from object storage. 

For compacted topics, Redpanda compacts segments after they have been uploaded to object storage. Redpanda initially uploads all uncompacted segments. It then re-uploads the segments with compaction applied. It's likely that some segments in object storage are not compacted, but the Tiered Storage read path can manage this. 

#### Manage local capacity for Tiered Storage topics

You can use properties to control retention of topic data in local storage. With Tiered Storage enabled, data in local storage expires after the topic-level properties `retention.local.target.ms` or `retention.local.target.bytes`. (These settings are equivalent to `retention.ms` and `retention.bytes` without Tiered Storage.) 

You can also use the cluster-level properties `retention_local_target_ms_default` and `retention_local_target_bytes_default`. Settings can depend on the size of your drive, how many partitions you have, and how much data you keep for each partition.

When set, Redpanda keeps actively-used and sequential (next segment) data in local cache and targets to maintain this age of data in local storage. It purges data based on actual available local volume space, without forcing disk full situations when there is data skew. 

At topic creation with Tiered Storage enabled:
- If `retention.ms` or `retention.bytes` is set, Redpanda initializes the `retention.local.target.*` properties. 
- If `retention.local.target.ms` or `retention.local.target.bytes` is set, Redpanda initializes the `min(retention.bytes, retention.local.target.bytes)` and `max(retention.ms, retention.local.target.ms)` properties.
- If properties are not specified:
  - Starting in version 22.3, new topics use the default retention values of one day for local storage (`retention_local_target_ms_default`) and seven days for all storage, including object storage (`delete_retention_ms`).
  - Upgraded topics retain their historical defaults of infinite retention.

After topic configuration, if Tiered Storage was disabled and must be enabled, or was enabled and must be disabled, Redpanda uses the local retention properties set for the topic.